# debian-devel-changes-bot

./: .gitignore  Oscarg933.github.io  README  pyproject.toml  setup.cfg  setup.py
DebianDevelChanges/: __init__.py  config.py  plugin.py
DebianDevelChangesBot/: __init__.py
DebianDevelChangesBot/datasources/: __init__.py  aptarchive.py  dinstall.py  maintainer.py  new_queue.py  pseudo-packages.description  pseudo-packages.maintainers  pseudo_packages.py  rm_queue.py  testing_rc_bugs.py
DebianDevelChangesBot/mailparsers/: __init__.py  accepted_upload.py  bug_closed.py  bug_submitted.py  security_announce.py
DebianDevelChangesBot/messages/: __init__.py  accepted_upload.py  bug_closed.py  bug_submitted.py  bug_synopsis.py  popcon.py  security_announce.py
DebianDevelChangesBot/utils/: __init__.py  dbus.py  decoding.py  fiforeader.py  format_email_address.py  irc_colours.py  madison.py  parse_mail.py  popcon.py  rewrite_topic.py  tidy_bug_title.py
bot-config/: BTS.conf  BTS.conf.in  forward  oftc-stunnel.conf
bot-config/apt/: sources.list
bot-config/conf/: users.conf
dbus/: org.debian.BTS.conf
debian/: .gitignore  changelog  control  copyright  debian-devel-changes-bot-apt-update.service  debian-devel-changes-bot-apt-update.timer  debian-devel-changes-bot.config  debian-devel-changes-bot.init  debian-devel-changes-bot.install  debian-devel-changes-bot.logcheck.ignore.server  debian-devel-changes-bot.maintscript  debian-devel-changes-bot.postinst  debian-devel-changes-bot.postrm  debian-devel-changes-bot.service  debian-devel-changes-bot.sysusers  debian-devel-changes-bot.templates  debian-devel-changes-bot.tmpfile  debian-devel-changes-bot.tmpfiles  debian-devel-changes.monit  init  install  links  postinst  postrm  preinst  rules
debian/logrotate.d/: debian-devel-changes-bot
debian/source/: lintian-overrides
stunnel4/: oftc.conf
tests/: test_all.py  test_coverage.py  test_datasources_aptarchive.py  test_datasources_dinstall.py  test_datasources_maintainer.py  test_datasources_new_queue.py  test_datasources_rm_queue.py  test_datasources_testing_rc_bugs.py  test_fixtures.py  test_mailparsers_accepted_upload.py  test_mailparsers_bug_closed.py  test_mailparsers_bug_submitted.py  test_mailparsers_security_announce.py  test_utils_decoding.py  test_utils_format_email.py  test_utils_parse_mail.py  test_utils_popcon.py  test_utils_rewrite_topic.py  test_utils_tidy_bug_title.py
(+14 files in other folders)
