[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-devel-changes-bot"
version = "20250817"
description = "Debian development activity IRC bot"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["beautifulsoup4", "python-debian", "requests", "python-apt"]

[tool.setuptools]
include-package-data = true
packages = [
  "DebianDevelChangesBot",
  "DebianDevelChanges",
  "DebianDevelChangesBot.utils",
  "DebianDevelChangesBot.messages",
  "DebianDevelChangesBot.mailparsers",
  "DebianDevelChangesBot.datasources",
]

[tool.black]
target_version = ["py313"]
include = 'bin/inject'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
  | docs
)/
'''
