[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-devel-changes-bot"
version = "20260303"
description = "Debian development activity IRC bot"
requires-python = ">=3.13"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["beautifulsoup4", "python-debian", "requests", "python-apt"]

[tool.setuptools]
packages = [
  "DebianDevelChangesBot",
  "DebianDevelChanges",
  "DebianDevelChangesBot.utils",
  "DebianDevelChangesBot.mailparsers",
  "DebianDevelChangesBot.datasources",
]

[tool.setuptools.package-data]
"DebianDevelChangesBot.datasources" = [
  "pseudo-packages.description",
  "pseudo-packages.maintainers",
]

[tool.black]
target_version = ["py313"]
include = 'bin/inject'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
  | docs
)/
'''
