[metadata]
name = debian-devel-changes-bot
version = 20250817
description = Debian development activity IRC bot
project_urls =
    GitHub = https://github.com/sebastinas/debian-devel-changes-bot
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.13
packages =
    DebianDevelChangesBot
    DebianDevelChanges
    DebianDevelChangesBot.utils
    DebianDevelChangesBot.messages
    DebianDevelChangesBot.mailparsers
    DebianDevelChangesBot.datasources
install_requires =
    beautifulsoup4
    python-debian
    requests
    python-apt
